# bambu-pipe

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
apps/api/: deps.py  main.py
apps/api/routes/: health.py  jobs.py  printer.py
docker/: Dockerfile.api  compose.yml
docs/: api.md  architecture.md  configuration.md  printer-setup.md  provider-contracts.md  pypi-publish.md  python-api.md  release.md  tripo-smoke.md
examples/: local_api_upload.py  print_model.py  print_prompt.py
profiles/: README.md
profiles/bambu_a1/: profiles.json
scripts/: bootstrap_profiles.sh
tests/: conftest.py
tests/fixtures/: cube.stl
tests/fixtures/profiles/: filament_petg.json  machine.json  process_standard.json
tests/unit/: test_api.py  test_cli.py  test_job_model.py  test_pipeline_api.py  test_printer_payload.py  test_slicer_ams_metadata.py  test_sqlite_store.py  test_tripo_provider.py  test_validate.py  test_voice_config.py
