[project]
name = "bambu-pipe-workspace"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    "packages/bambu_pipe/src",
    "packages/voice2bambu/src",
    ".",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
